# topo-drought-briefing

./: .gitignore  CLAUDE.md  README.md  app.py  codebase.txt  index.html  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: 01-change-threshold.yml  02-change-text.yml  03-add-update-link.yml  04-report-problem.yml  config.yml
.github/workflows/: daily-update.yml  deploy.yml  int-preview.yml
assets/: app.js
canton/AG/: index.html  map_cdi1.html  map_cdi2.html
canton/AI/: index.html  map_cdi1.html  map_cdi2.html
canton/AR/: index.html  map_cdi1.html  map_cdi2.html
canton/BE/: index.html  map_cdi1.html  map_cdi2.html
canton/BL/: index.html  map_cdi1.html  map_cdi2.html
canton/BS/: index.html  map_cdi1.html  map_cdi2.html
canton/FR/: index.html  map_cdi1.html  map_cdi2.html
canton/GE/: index.html  map_cdi1.html  map_cdi2.html
canton/GL/: index.html  map_cdi1.html  map_cdi2.html
canton/GR/: index.html  map_cdi1.html  map_cdi2.html
canton/JU/: index.html  map_cdi1.html  map_cdi2.html
config/: rules.yaml  rules_loader.py  settings.py  sources.yaml
data/: berne_warnregionen.geojson  kantone_warnregionen.json  vhi_fixture.csv
docs/: index.html
int/: index.html
scripts/: aggregate.py  extract_station_mappings.py  generate_site.py  refresh_warnkarte_fixture.py
src/: models.py
tests/: test_aggregation.py  test_canton.py  test_fixture_loader.py  test_i18n.py  test_models.py  test_quality.py  test_renderer.py  test_settings_cantons.py  test_stations.py  test_text_blocks.py  test_vhi_client.py  test_warnkarte_client.py
(+205 files in other folders)
