[project]
name = "drought-briefing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pystac-client>=0.9.0",
    "requests>=2.34.2",
    "shapely>=2.1.2",
    "streamlit>=1.57.0",
    "streamlit-folium>=0.27.2",
    "weasyprint>=68.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
