[project]
name = "drought-briefing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "jinja2>=3.1.6",
    "jsonschema>=4.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "requests>=2.28",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "responses>=0.26.1",
]
